# dp

./: CMakeLists.txt  vcpkg.json
assets/models/cube/: cube.blend  cube.blend1  cube.mtl
assets/models/quad/: quad.blend  quad.blend1  quad.mtl
assets/models/room/: room.mtl
cmake/: shader_compilation.cmake
libs/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_internal.h
libs/imgui/docs/: BACKENDS.md  CHANGELOG.txt  FAQ.md  README.md  TODO.txt
libs/imgui/examples/example_allegro5/: README.md
libs/imgui/misc/cpp/: README.txt
shaders/: common.glsl  constants.glsl  gbuffer_fill.frag  shader.frag  shader.vert  skypass.frag  skypass.vert  tonemappers.glsl
src/: engine.cpp  engine.h  observer.h  utils.cpp  utils.h  vkUtils.cpp  vkUtils.h  window.cpp  window.h
src/engine/: concepts.h  engine.cpp  engine.h  gBuffer.cpp  gBuffer.h  iDrawGui.h  material.cpp  material.h  modelLoader.cpp  modelLoader.h  observer.h  observers.h  texture.cpp  texture.h  transform.h  uboFormat.h  utils.cpp  utils.h  vkUtils.cpp  vkUtils.h  window.cpp  window.h
src/engine/managers/: inputManager.cpp  inputManager.h  managedResource.cpp  managedResource.h  materialManager.cpp  materialManager.h  meshManager.cpp  meshManager.h  resourceManager.cpp  resourceManager.h  resourceManagerBase.cpp  resourceManagerBase.h  textureManager.cpp  textureManager.h
src/engine/scene/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  modelLoader.cpp  modelLoader.h  scene.h
src/engine/vk/: graphicsPipeline.cpp  graphicsPipeline.h  vkUtils.cpp  vkUtils.h  vmaUsage.cpp
src/entry/: main.cpp  vmaUsage.cpp  vmaUsage.h
src/scene/: Vertex.h  camera.cpp  camera.h  material.cpp  material.h  mesh.cpp  mesh.h  model.h  scene.cpp  scene.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex.h
